// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CameraRollSelect renders correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#fff",
      "flex": 1,
      "justifyContent": "center",
      "marginTop": 5,
    }
  }
>
  <View
    accessibilityRole="button"
    accessibilityStates={Array []}
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <View
      style={
        Array [
          Object {},
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#007AFF",
              "fontSize": 18,
              "padding": 8,
              "textAlign": "center",
            },
          ]
        }
      >
        Seleccionar Imágenes
      </Text>
    </View>
  </View>
</View>
`;

exports[`CategoryPickerModal renders correctly 1`] = `
<View
  style={
    Object {
      "marginTop": 0,
    }
  }
>
  <Modal
    animationType="slide"
    hardwareAccelerated={false}
    onRequestClose={[Function]}
    transparent={false}
    visible={false}
  >
    <Text />
  </Modal>
  <View
    style={
      Object {
        "borderRadius": 3,
      }
    }
  >
    <View
      accessible={true}
      isTVSelectable={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "height": 60,
          "opacity": 1,
          "width": 160,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#2089dc",
            "borderColor": "#2089dc",
            "borderRadius": 3,
            "borderWidth": 0,
            "flexDirection": "row",
            "justifyContent": "center",
            "padding": 8,
          }
        }
      >
        <Text />
        <Text
          style={
            Object {
              "color": "white",
              "fontSize": 18,
              "paddingBottom": 1,
              "paddingTop": 2,
              "textAlign": "center",
            }
          }
        >
           Elegir Categoría
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Chat renders correctly 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  />
  <View
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "right": 0,
        },
        Object {
          "height": 0,
        },
        Object {
          "marginVertical": 20,
        },
      ]
    }
  />
</View>
`;

exports[`Comprar renders correctly 1`] = `
<View
  style={
    Object {
      "marginTop": 0,
    }
  }
>
  <View
    rkType=""
    style={
      Object {
        "position": "relative",
        "top": 0,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": undefined,
          "flex": 1,
          "justifyContent": "center",
          "paddingVertical": 25,
        }
      }
    >
      <Modal
        hardwareAccelerated={false}
        onRequestClose={[Function]}
        visible={false}
      >
        <View
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <RCTWebView
            injectedJavaScript="document.f1.submit()"
            messagingEnabled={false}
            onLoadingError={[Function]}
            onLoadingFinish={[Function]}
            onLoadingStart={[Function]}
            onMessage={[Function]}
            onShouldStartLoadWithRequest={[Function]}
            scalesPageToFit={true}
            source={
              Object {
                "uri": "",
              }
            }
            style={
              Array [
                Object {
                  "flex": 1,
                },
                Object {
                  "backgroundColor": "#ffffff",
                },
                undefined,
              ]
            }
          />
        </View>
      </Modal>
      <View
        style={
          Object {
            "marginVertical": 15,
          }
        }
      >
        <View
          style={
            Object {
              "marginLeft": 25,
              "marginTop": 150,
            }
          }
        >
          <View
            accessible={true}
            isTVSelectable={true}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "backgroundColor": "white",
                "borderColor": "black",
                "height": 100,
                "opacity": 1,
                "width": 300,
              }
            }
          >
            <Text
              rkType="header6 primary"
              style={
                Array [
                  Array [
                    Object {
                      "fontSize": 15,
                    },
                    Object {
                      "color": "#397edc",
                    },
                    Object {
                      "backgroundColor": "transparent",
                    },
                  ],
                  Object {
                    "fontSize": 45,
                    "marginLeft": 5,
                  },
                ]
              }
            >
              Pay with Paypal
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "marginLeft": 235,
          "marginTop": 600,
        }
      }
    >
      <Text
        rkType=""
        style={
          Array [
            Array [
              Object {
                "fontSize": 15,
              },
              Object {
                "color": "#000000dd",
              },
              Object {
                "backgroundColor": "transparent",
              },
            ],
            undefined,
          ]
        }
      >
        Payment Status: 
        Pending
      </Text>
    </View>
  </View>
</View>
`;

exports[`ComprarModal renders correctly 1`] = `
<View
  style={
    Object {
      "marginTop": 0,
    }
  }
>
  <Modal
    animationType="slide"
    hardwareAccelerated={false}
    onRequestClose={[Function]}
    transparent={false}
    visible={false}
  >
    <View
      style={
        Object {
          "marginTop": 0,
        }
      }
    >
      <View
        rkType=""
        style={
          Object {
            "position": "relative",
            "top": 0,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": undefined,
              "flex": 1,
              "justifyContent": "center",
              "paddingVertical": 25,
            }
          }
        >
          <Modal
            hardwareAccelerated={false}
            onRequestClose={[Function]}
            visible={false}
          >
            <View
              style={
                Object {
                  "flex": 1,
                }
              }
            >
              <RCTWebView
                injectedJavaScript="document.f1.submit()"
                messagingEnabled={false}
                onLoadingError={[Function]}
                onLoadingFinish={[Function]}
                onLoadingStart={[Function]}
                onMessage={[Function]}
                onShouldStartLoadWithRequest={[Function]}
                scalesPageToFit={true}
                source={
                  Object {
                    "uri": "",
                  }
                }
                style={
                  Array [
                    Object {
                      "flex": 1,
                    },
                    Object {
                      "backgroundColor": "#ffffff",
                    },
                    undefined,
                  ]
                }
              />
            </View>
          </Modal>
          <View
            style={
              Object {
                "marginVertical": 15,
              }
            }
          >
            <View
              style={
                Object {
                  "marginLeft": 25,
                  "marginTop": 150,
                }
              }
            >
              <View
                accessible={true}
                isTVSelectable={true}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "backgroundColor": "white",
                    "borderColor": "black",
                    "height": 100,
                    "opacity": 1,
                    "width": 300,
                  }
                }
              >
                <Text
                  rkType="header6 primary"
                  style={
                    Array [
                      Array [
                        Object {
                          "fontSize": 15,
                        },
                        Object {
                          "color": "#397edc",
                        },
                        Object {
                          "backgroundColor": "transparent",
                        },
                      ],
                      Object {
                        "fontSize": 45,
                        "marginLeft": 5,
                      },
                    ]
                  }
                >
                  Pay with Paypal
                </Text>
              </View>
            </View>
          </View>
        </View>
        <View
          style={
            Object {
              "marginLeft": 235,
              "marginTop": 600,
            }
          }
        >
          <Text
            rkType=""
            style={
              Array [
                Array [
                  Object {
                    "fontSize": 15,
                  },
                  Object {
                    "color": "#000000dd",
                  },
                  Object {
                    "backgroundColor": "transparent",
                  },
                ],
                undefined,
              ]
            }
          >
            Payment Status: 
            Pending
          </Text>
        </View>
      </View>
    </View>
    <Text />
  </Modal>
  <View
    style={
      Object {
        "borderRadius": 3,
      }
    }
  >
    <View
      accessible={true}
      isTVSelectable={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "mediumseagreen",
            "borderColor": "#2089dc",
            "borderRadius": 3,
            "borderWidth": 0,
            "flexDirection": "row",
            "justifyContent": "center",
            "padding": 8,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "white",
              "fontSize": 18,
              "margin": 10,
              "paddingBottom": 1,
              "paddingTop": 2,
              "textAlign": "center",
              "width": 335,
            }
          }
        >
          Comprar
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Conversaciones renders correctly 1`] = `null`;

exports[`CustomLeftDrawerComponent renders correctly 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "white",
        "height": 100,
        "justifyContent": "center",
        "marginTop": 30,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 37.5,
          "height": 75,
          "marginHorizontal": 10,
          "width": 75,
        }
      }
      theme={
        Object {
          "colors": Object {
            "disabled": "hsl(208, 8%, 90%)",
            "divider": "#bcbbc1",
            "error": "#ff190c",
            "grey0": "#393e42",
            "grey1": "#43484d",
            "grey2": "#5e6977",
            "grey3": "#86939e",
            "grey4": "#bdc6cf",
            "grey5": "#e1e8ee",
            "greyOutline": "#bbb",
            "platform": Object {
              "android": Object {
                "error": "#f44336",
                "primary": "#2196f3",
                "secondary": "#9C27B0",
                "success": "#4caf50",
                "warning": "#ffeb3b",
              },
              "ios": Object {
                "error": "#ff3b30",
                "primary": "#007aff",
                "secondary": "#5856d6",
                "success": "#4cd964",
                "warning": "#ffcc00",
              },
            },
            "primary": "#2089dc",
            "searchBg": "#303337",
            "secondary": "#8F0CE8",
            "success": "#52c41a",
            "warning": "#faad14",
          },
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "#bdbdbd",
            "borderRadius": 37.5,
            "flex": 1,
            "overflow": "hidden",
            "position": "relative",
          }
        }
      >
        <Image
          onLoadEnd={[Function]}
          source={
            Object {
              "uri": "http://34.90.77.95:10080/user/default.png",
            }
          }
          style={
            Object {
              "flex": 1,
              "height": null,
              "width": null,
            }
          }
          theme={
            Object {
              "colors": Object {
                "disabled": "hsl(208, 8%, 90%)",
                "divider": "#bcbbc1",
                "error": "#ff190c",
                "grey0": "#393e42",
                "grey1": "#43484d",
                "grey2": "#5e6977",
                "grey3": "#86939e",
                "grey4": "#bdc6cf",
                "grey5": "#e1e8ee",
                "greyOutline": "#bbb",
                "platform": Object {
                  "android": Object {
                    "error": "#f44336",
                    "primary": "#2196f3",
                    "secondary": "#9C27B0",
                    "success": "#4caf50",
                    "warning": "#ffeb3b",
                  },
                  "ios": Object {
                    "error": "#ff3b30",
                    "primary": "#007aff",
                    "secondary": "#5856d6",
                    "success": "#4cd964",
                    "warning": "#ffcc00",
                  },
                },
                "primary": "#2089dc",
                "searchBg": "#303337",
                "secondary": "#8F0CE8",
                "success": "#52c41a",
                "warning": "#faad14",
              },
            }
          }
        />
        <View
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "opacity": 1,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#bdbdbd",
                "flex": 1,
                "height": null,
                "justifyContent": "center",
                "width": null,
              }
            }
            testID="RNE__Image__placeholder"
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`DashboardScreen renders correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <Text>
    DashboardScreen
  </Text>
</View>
`;

exports[`DeleteAccount renders correctly 1`] = `
<View>
  <View
    style={
      Object {
        "backgroundColor": "#F5F5F5",
        "height": 1334,
      }
    }
  >
    <View
      accessibilityIgnoresInvertColors={true}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#0864AF",
          "borderBottomColor": "#f2f2f2",
          "borderBottomWidth": 0.5,
          "flexDirection": "row",
          "height": 64,
          "justifyContent": "space-between",
          "paddingHorizontal": 10,
          "paddingTop": 20,
        }
      }
    >
      <Image
        style={
          Array [
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            Object {
              "height": 64,
              "width": undefined,
            },
            undefined,
          ]
        }
        testID="headerContainer"
      />
      <View
        style={
          Object {
            "alignItems": "flex-start",
            "flex": 1,
          }
        }
      />
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 3,
          }
        }
      >
        <Text
          numberOfLines={1}
          style={
            Object {
              "color": "#fff",
              "fontSize": 24,
              "marginBottom": 20,
            }
          }
          text="BORRAR CUENTA"
          theme={
            Object {
              "colors": Object {
                "disabled": "hsl(208, 8%, 90%)",
                "divider": "#bcbbc1",
                "error": "#ff190c",
                "grey0": "#393e42",
                "grey1": "#43484d",
                "grey2": "#5e6977",
                "grey3": "#86939e",
                "grey4": "#bdc6cf",
                "grey5": "#e1e8ee",
                "greyOutline": "#bbb",
                "platform": Object {
                  "android": Object {
                    "error": "#f44336",
                    "primary": "#2196f3",
                    "secondary": "#9C27B0",
                    "success": "#4caf50",
                    "warning": "#ffeb3b",
                  },
                  "ios": Object {
                    "error": "#ff3b30",
                    "primary": "#007aff",
                    "secondary": "#5856d6",
                    "success": "#4cd964",
                    "warning": "#ffcc00",
                  },
                },
                "primary": "#2089dc",
                "searchBg": "#303337",
                "secondary": "#8F0CE8",
                "success": "#52c41a",
                "warning": "#faad14",
              },
            }
          }
        >
          BORRAR CUENTA
        </Text>
      </View>
      <View
        style={
          Object {
            "alignItems": "flex-end",
            "flex": 1,
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "borderBottomWidth": 0.5,
          "borderColor": "#0000001A",
          "flexDirection": "row",
          "marginTop": 50,
          "paddingHorizontal": 17.5,
        }
      }
    >
      <View
        style={
          Object {
            "paddingHorizontal": 10,
            "width": "100%",
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#86939e",
              "fontSize": 16,
              "fontWeight": "bold",
            }
          }
        >
          Introduzca su contraseña:
        </Text>
        <View
          style={
            Object {
              "alignItems": "center",
              "borderBottomWidth": 1,
              "borderColor": "#86939e",
              "flexDirection": "row",
              "transform": Array [
                Object {
                  "translateX": 0,
                },
              ],
            }
          }
        >
          <TextInput
            allowFontScaling={true}
            onChangeText={[Function]}
            secureTextEntry={true}
            style={
              Object {
                "alignSelf": "center",
                "color": "black",
                "flex": 1,
                "fontSize": 18,
                "minHeight": 40,
              }
            }
            testID="RNE__Input__text-input"
            underlineColorAndroid="transparent"
            value=""
          />
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "borderRadius": 3,
          "height": 180,
          "marginHorizontal": 30,
        }
      }
    >
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "flex": 1,
            "height": 30,
            "opacity": 1,
            "paddingVertical": 30,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#2089dc",
              "borderColor": "#2089dc",
              "borderRadius": 3,
              "borderWidth": 0,
              "flexDirection": "row",
              "justifyContent": "center",
              "padding": 8,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "white",
                "fontSize": 18,
                "paddingBottom": 1,
                "paddingTop": 2,
                "textAlign": "center",
              }
            }
          >
            BORRAR
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`DeleteAccountModal renders correctly 1`] = `
<View
  style={
    Object {
      "marginTop": 0,
    }
  }
>
  <Modal
    animationType="slide"
    hardwareAccelerated={false}
    onRequestClose={[Function]}
    transparent={false}
    visible={false}
  >
    <View>
      <View
        style={
          Object {
            "backgroundColor": "#F5F5F5",
            "height": 1334,
          }
        }
      >
        <View
          accessibilityIgnoresInvertColors={true}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#0864AF",
              "borderBottomColor": "#f2f2f2",
              "borderBottomWidth": 0.5,
              "flexDirection": "row",
              "height": 64,
              "justifyContent": "space-between",
              "paddingHorizontal": 10,
              "paddingTop": 20,
            }
          }
        >
          <Image
            style={
              Array [
                Object {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
                Object {
                  "height": 64,
                  "width": undefined,
                },
                undefined,
              ]
            }
            testID="headerContainer"
          />
          <View
            style={
              Object {
                "alignItems": "flex-start",
                "flex": 1,
              }
            }
          />
          <View
            style={
              Object {
                "alignItems": "center",
                "flex": 3,
              }
            }
          >
            <Text
              numberOfLines={1}
              style={
                Object {
                  "color": "#fff",
                  "fontSize": 24,
                  "marginBottom": 20,
                }
              }
              text="BORRAR CUENTA"
              theme={
                Object {
                  "colors": Object {
                    "disabled": "hsl(208, 8%, 90%)",
                    "divider": "#bcbbc1",
                    "error": "#ff190c",
                    "grey0": "#393e42",
                    "grey1": "#43484d",
                    "grey2": "#5e6977",
                    "grey3": "#86939e",
                    "grey4": "#bdc6cf",
                    "grey5": "#e1e8ee",
                    "greyOutline": "#bbb",
                    "platform": Object {
                      "android": Object {
                        "error": "#f44336",
                        "primary": "#2196f3",
                        "secondary": "#9C27B0",
                        "success": "#4caf50",
                        "warning": "#ffeb3b",
                      },
                      "ios": Object {
                        "error": "#ff3b30",
                        "primary": "#007aff",
                        "secondary": "#5856d6",
                        "success": "#4cd964",
                        "warning": "#ffcc00",
                      },
                    },
                    "primary": "#2089dc",
                    "searchBg": "#303337",
                    "secondary": "#8F0CE8",
                    "success": "#52c41a",
                    "warning": "#faad14",
                  },
                }
              }
            >
              BORRAR CUENTA
            </Text>
          </View>
          <View
            style={
              Object {
                "alignItems": "flex-end",
                "flex": 1,
              }
            }
          />
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "borderBottomWidth": 0.5,
              "borderColor": "#0000001A",
              "flexDirection": "row",
              "marginTop": 50,
              "paddingHorizontal": 17.5,
            }
          }
        >
          <View
            style={
              Object {
                "paddingHorizontal": 10,
                "width": "100%",
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#86939e",
                  "fontSize": 16,
                  "fontWeight": "bold",
                }
              }
            >
              Introduzca su contraseña:
            </Text>
            <View
              style={
                Object {
                  "alignItems": "center",
                  "borderBottomWidth": 1,
                  "borderColor": "#86939e",
                  "flexDirection": "row",
                  "transform": Array [
                    Object {
                      "translateX": 0,
                    },
                  ],
                }
              }
            >
              <TextInput
                allowFontScaling={true}
                onChangeText={[Function]}
                secureTextEntry={true}
                style={
                  Object {
                    "alignSelf": "center",
                    "color": "black",
                    "flex": 1,
                    "fontSize": 18,
                    "minHeight": 40,
                  }
                }
                testID="RNE__Input__text-input"
                underlineColorAndroid="transparent"
                value=""
              />
            </View>
          </View>
        </View>
        <View
          style={
            Object {
              "borderRadius": 3,
              "height": 180,
              "marginHorizontal": 30,
            }
          }
        >
          <View
            accessible={true}
            isTVSelectable={true}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "flex": 1,
                "height": 30,
                "opacity": 1,
                "paddingVertical": 30,
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#2089dc",
                  "borderColor": "#2089dc",
                  "borderRadius": 3,
                  "borderWidth": 0,
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "padding": 8,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "white",
                    "fontSize": 18,
                    "paddingBottom": 1,
                    "paddingTop": 2,
                    "textAlign": "center",
                  }
                }
              >
                BORRAR
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
    <Text />
  </Modal>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "borderBottomWidth": 0.5,
          "borderColor": "#0000001A",
          "flexDirection": "row",
        },
        Object {
          "marginVertical": 15,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "borderRadius": 3,
          "height": 40,
        }
      }
    >
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "flex": 1,
            "height": 50,
            "opacity": 1,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "transparent",
              "borderColor": "#2089dc",
              "borderRadius": 3,
              "borderWidth": 0,
              "flexDirection": "row",
              "justifyContent": "center",
              "padding": 8,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#2089dc",
                "fontSize": 18,
                "paddingBottom": 1,
                "paddingTop": 2,
                "textAlign": "center",
              }
            }
          >
            Borrar Cuenta
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`HomeScreen renders correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#fff",
      "flex": 1,
    }
  }
/>
`;

exports[`LinksScreen renders correctly 1`] = `null`;

exports[`MakeReview renders correctly 1`] = `null`;

exports[`ProductDetails renders correctly 1`] = `null`;

exports[`Review renders correctly 1`] = `
<View
  style={
    Object {
      "borderColor": "#dddddd",
      "borderRadius": 12,
      "borderWidth": 0.5,
      "flex": 1,
      "flexDirection": "row",
      "height": 100,
      "justifyContent": "flex-start",
      "marginBottom": 7,
      "marginHorizontal": 10,
      "width": 730,
    }
  }
>
  <View
    style={
      Object {
        "flex": 3,
        "flexDirection": "column",
        "margin": 10,
      }
    }
  >
    <View>
      <Text
        style={
          Object {
            "fontSize": 20,
            "fontWeight": "500",
            "paddingHorizontal": 10,
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "paddingRight": 440,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "transparent",
            "flexDirection": "column",
            "justifyContent": "center",
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
            }
          }
        >
          <View
            accessible={true}
            isTVSelectable={true}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <Image
              source={1}
              style={
                Object {
                  "height": 12,
                  "margin": 3,
                  "tintColor": "#f1c40f",
                  "transform": Array [
                    Object {
                      "scale": 1,
                    },
                  ],
                  "width": 12,
                }
              }
            />
          </View>
          <View
            accessible={true}
            isTVSelectable={true}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <Image
              source={1}
              style={
                Object {
                  "height": 12,
                  "margin": 3,
                  "tintColor": "#f1c40f",
                  "transform": Array [
                    Object {
                      "scale": 1,
                    },
                  ],
                  "width": 12,
                }
              }
            />
          </View>
          <View
            accessible={true}
            isTVSelectable={true}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <Image
              source={1}
              style={
                Object {
                  "height": 12,
                  "margin": 3,
                  "tintColor": "#f1c40f",
                  "transform": Array [
                    Object {
                      "scale": 1,
                    },
                  ],
                  "width": 12,
                }
              }
            />
          </View>
          <View
            accessible={true}
            isTVSelectable={true}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <Image
              source={1}
              style={
                Object {
                  "height": 12,
                  "margin": 3,
                  "tintColor": undefined,
                  "transform": Array [
                    Object {
                      "scale": 1,
                    },
                  ],
                  "width": 12,
                }
              }
            />
          </View>
          <View
            accessible={true}
            isTVSelectable={true}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <Image
              source={1}
              style={
                Object {
                  "height": 12,
                  "margin": 3,
                  "tintColor": undefined,
                  "transform": Array [
                    Object {
                      "scale": 1,
                    },
                  ],
                  "width": 12,
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
    <View>
      <Text
        numberOfLines={9}
        style={
          Object {
            "fontSize": 14,
            "fontWeight": "200",
            "marginTop": 10,
            "paddingHorizontal": 10,
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`ReviewModal renders correctly 1`] = `
<View
  style={
    Object {
      "marginTop": 0,
    }
  }
>
  <Modal
    animationType="slide"
    hardwareAccelerated={false}
    onRequestClose={[Function]}
    transparent={false}
    visible={false}
  >
    <Text />
  </Modal>
  <View>
    <View
      style={
        Object {
          "borderRadius": 3,
        }
      }
    >
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#2089dc",
              "borderColor": "#2089dc",
              "borderRadius": 3,
              "borderWidth": 0,
              "flexDirection": "row",
              "justifyContent": "center",
              "padding": 8,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "white",
                "fontSize": 18,
                "paddingBottom": 1,
                "paddingTop": 2,
                "textAlign": "center",
              }
            }
          >
            Valorar Usuario
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`SubastarModal renders correctly 1`] = `
<View
  style={
    Object {
      "marginTop": 0,
    }
  }
>
  <Modal
    animationType="slide"
    hardwareAccelerated={false}
    onRequestClose={[Function]}
    transparent={false}
    visible={false}
  >
    <View
      style={
        Object {
          "marginTop": 200,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "borderBottomWidth": 0.5,
            "borderColor": "#0000001A",
            "flexDirection": "row",
            "paddingHorizontal": 37.5,
          }
        }
      >
        <Text
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": undefined,
              "flex": 1,
              "justifyContent": "center",
              "paddingVertical": 25,
            }
          }
        >
          
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "borderBottomWidth": 0.5,
          "borderColor": "#0000001A",
          "flexDirection": "row",
          "paddingHorizontal": 37.5,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "grey",
            "marginRight": 10,
            "marginVertical": 20,
          }
        }
      >
        Precio actual: 
        0
      </Text>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "borderBottomWidth": 0.5,
          "borderColor": "#0000001A",
          "flexDirection": "row",
          "paddingHorizontal": 37.5,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "grey",
            "marginRight": 10,
            "marginVertical": 20,
          }
        }
      >
        Pujar: 
      </Text>
      <TextInput
        allowFontScaling={true}
        autoFocus={true}
        keyboardType="numeric"
        onChangeText={[Function]}
        style={
          Object {
            "borderColor": "white",
            "borderWidth": 1,
            "height": 30,
            "width": 300,
          }
        }
        underlineColorAndroid="transparent"
        value={null}
      />
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "marginHorizontal": 30,
        }
      }
    >
      <View
        style={
          Object {
            "borderRadius": 3,
          }
        }
      >
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#2089dc",
                "borderColor": "#2089dc",
                "borderRadius": 3,
                "borderWidth": 0,
                "flexDirection": "row",
                "justifyContent": "center",
                "padding": 8,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "white",
                  "fontSize": 18,
                  "margin": 10,
                  "marginHorizontal": 10,
                  "paddingBottom": 1,
                  "paddingTop": 2,
                  "textAlign": "center",
                }
              }
            >
              Pujar
            </Text>
          </View>
        </View>
      </View>
    </View>
    <Text />
  </Modal>
  <View
    style={
      Object {
        "borderRadius": 3,
      }
    }
  >
    <View
      accessible={true}
      isTVSelectable={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "mediumseagreen",
            "borderColor": "#2089dc",
            "borderRadius": 3,
            "borderWidth": 0,
            "flexDirection": "row",
            "justifyContent": "center",
            "padding": 8,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "white",
              "fontSize": 18,
              "margin": 10,
              "paddingBottom": 1,
              "paddingTop": 2,
              "textAlign": "center",
              "width": 335,
            }
          }
        >
          Pujar
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`TypePickerModal renders correctly 1`] = `
<View
  style={
    Object {
      "marginTop": 0,
    }
  }
>
  <Modal
    animationType="slide"
    hardwareAccelerated={false}
    onRequestClose={[Function]}
    transparent={false}
    visible={false}
  >
    <Text />
  </Modal>
  <View
    style={
      Object {
        "borderRadius": 3,
      }
    }
  >
    <View
      accessible={true}
      isTVSelectable={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "height": 60,
          "opacity": 1,
          "width": 160,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#2089dc",
            "borderColor": "#2089dc",
            "borderRadius": 3,
            "borderWidth": 0,
            "flexDirection": "row",
            "justifyContent": "center",
            "padding": 8,
          }
        }
      >
        <Text />
        <Text
          style={
            Object {
              "color": "white",
              "fontSize": 18,
              "paddingBottom": 1,
              "paddingTop": 2,
              "textAlign": "center",
            }
          }
        >
           Elegir Tipo
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`UploadMultimedia renders correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <Text
    style={
      Object {
        "fontSize": 20,
        "marginBottom": 20,
        "marginHorizontal": 15,
        "textAlign": "center",
      }
    }
  >
    Example: Upload ImagePicker result
  </Text>
  <View
    accessibilityRole="button"
    accessibilityStates={Array []}
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <View
      style={
        Array [
          Object {},
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#007AFF",
              "fontSize": 18,
              "padding": 8,
              "textAlign": "center",
            },
          ]
        }
      >
        Pick an image from camera roll
      </Text>
    </View>
  </View>
  <View
    accessibilityRole="button"
    accessibilityStates={Array []}
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <View
      style={
        Array [
          Object {},
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#007AFF",
              "fontSize": 18,
              "padding": 8,
              "textAlign": "center",
            },
          ]
        }
      >
        Take a photo
      </Text>
    </View>
  </View>
</View>
`;

exports[`WelcomeScreen renders correctly 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    accessibilityIgnoresInvertColors={true}
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "height": 1334,
        "justifyContent": "center",
        "left": 0,
        "resizeMode": "stretch",
        "top": 0,
        "width": 750,
      }
    }
  >
    <Image
      source={1}
      style={
        Array [
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          Object {
            "height": 1334,
            "width": 750,
          },
          undefined,
        ]
      }
    />
    <Text>
      Cargando...
    </Text>
  </View>
</View>
`;
